# TranstatDesktop

./: .gitignore  CMakeLists.txt  Debugger.h  LICENSE  README.md  addcounter.cpp  addcounter.h  addcounter.ui  analysisid.cpp  analysisid.h  analysisid.ui  cvutilities.cpp  cvutilities.h  dbconnection.cpp  dbconnection.h  debugger.h  detector.cpp  detector.h  drawcounter.cpp  drawcounter.h  drawcounter.ui  icons.qrc  magnifyvisuals.cpp  magnifyvisuals.h  magnifyvisuals.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvviewer.cpp  opencvviewer.h  player.cpp  player.h  support_images.qrc
database/: transtat.db
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Detector/: BaseDetector.h  Makefile  YoloDarknetDetector.cpp  YoloDetector.cpp  cmake_install.cmake
src/Detector/darknet/: Makefile  cmake_install.cmake
src/Detector/darknet/src/: yolo_console_dll.cpp
src/Detector/darknet/yolo_lib_autogen/: moc_predefs.h
src/Detector/mdetection_autogen/: moc_predefs.h
src/Detector/tensorrt_yolo/: Makefile  cmake_install.cmake  ds_image.cpp
src/Detector/tensorrt_yolo/yolo_rt_lib_autogen/: moc_predefs.h
src/Tracker/: Ctracker.h  Kalman.h  Makefile  ShortPathCalculator.h  cmake_install.cmake  track.h
src/Tracker/HungarianAlg/: HungarianAlg.h
src/Tracker/mtracking_autogen/: moc_predefs.h
src/common/: defines.h
